<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <DUT Name="E_STATE" Id="{39533dee-26a7-4289-ad0b-59a089f2abd9}">
    <Declaration><![CDATA[TYPE E_STATE :
(
	Init := 0,
	RegistrationRequest,
	RegistrationDone,
	Idle,
	EnterPrakingPos,
	LeavePrakingPos,
	LeaveChargingPos,
	NavigationOA,
	NavigationCA,
	Charging,
	Disturbance,
	Shutdown,
	Wait,
	Learning
);
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>