<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <DUT Name="E_STATE_CA" Id="{88babce0-eeae-41d2-a8d4-b8a5d975584a}">
    <Declaration><![CDATA[
TYPE E_STATE_CA :
(
	Docking := 0,
	Undocking,
	Relocation,
	Driving
);
END_TYPE]]></Declaration>
  </DUT>
</TcPlcObject>