<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <DUT Name="E_STATE_PARKING" Id="{370345f0-fb0b-4b7b-9426-1eba19f5c008}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
{attribute 'strict'}
TYPE E_STATE_PARKING :
(
	Idle := 0,
	DriveToPrakingArea := 1,
	EnterParkingSlot := 2,
	Parked := 3
);
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>