<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <DUT Name="STATUS_PATH_ALLOCATION" Id="{f3b66706-67f9-48d7-80a8-b95c8ea1cf6e}">
    <Declaration><![CDATA[TYPE STATUS_PATH_ALLOCATION :
STRUCT
	x_LeftPathAllocated : BOOL;
	x_RightPathAllocated : BOOL;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>